Close button alignment issue fix

--- a/packages/terra-tabs/src/common-tabs/Tab.module.scss
+++ b/packages/terra-tabs/src/common-tabs/Tab.module.scss
@@ -122,6 +122,7 @@
     flex: 0 1 auto;
     min-width: var(--terra-tabs-workspace-tab-min-width, 76px);
     display: inline-flex;
+    align-items: center;
     .inner {
       text-align: center;
     }
